# rush

./: Cargo.toml  README.md
.github/workflows/: dependency-review.yml  rust-clippy.yml  rust.yml
src/: shell.rs
