[package]
name = "rush"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.1"
rustyline = "12.0.0"
nix = "0.26.2"
signal-hook = "0.3.17"

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"
